Bug 1598216 - Change file extensions with invalid characters to valid file extensions on save. r=Gijs

Differential Revision: https://phabricator.services.mozilla.com/D65823